--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <p>At Mozilla, we’re a global community of</p>
 
-    <ul style="color: red;"> <!-- changed to list in the tutorial -->
+    <ul style="color: green;"> <!-- changed to list in the tutorial -->
       <li>technologists</li>
       <li>thinkers</li>
       <li>builders</li>
     </ul>
 
-    <div style="background-color: blue; height: 100px; width: 100px;"></div>
+    <div style="background-color: yellow; height: 100px; width: 100px;"></div>
 
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
   </body>
